[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/levels/mikes_hem/mikes_hem.gd" type="Script" id=1]
[ext_resource path="res://assets/mikes_hem.png" type="Texture" id=2]
[ext_resource path="res://scenes/navigation_Collision_tilemap.tres" type="TileSet" id=3]
[ext_resource path="res://scenes/mike/mike.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/dialogue_player/dialogue_player.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/d4v3/d4v3.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/j3ns/j3ns.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/tittarea/tittaarea.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/items/pripps.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/scenechange_titta/scenechange_titta.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/musik/hypnotize_midi_wav.wav" type="AudioStream" id=11]
[ext_resource path="res://scenes/trattooinekarta/trattooinekarta.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/flygpripps/flygpripps.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/Mike_Old/Mike_Old.tscn" type="PackedScene" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 297.615, 234.104 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64.8295, 237.805 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 326.813, 145.274 )

[node name="mikes_hem" type="Node2D"]
script = ExtResource( 1 )

[node name="dialogue_player" parent="." instance=ExtResource( 5 )]
dialogue_file = "res://assets/dialogue_data/start.json"
mike_path = NodePath("../YSort/mike")
jens_path = NodePath("../YSort/j3ns")
dave_path = NodePath("../YSort/d4v3")

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="TileMap" type="TileMap" parent="Navigation2D"]
visible = false
scale = Vector2( 2, 2 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 393219, 1, 0, 393220, 1, 0, 458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458776, 1, 0, 458777, 1, 0, 458778, 1, 0, 458779, 1, 0, 458781, 1, 0, 458782, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524312, 1, 0, 524313, 1, 0, 524314, 1, 0, 524315, 1, 0, 524317, 1, 0, 524318, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 589848, 1, 0, 589849, 1, 0, 589850, 1, 0, 589851, 1, 0, 589852, 1, 0, 589853, 1, 0, 589854, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 1, 0, 655380, 1, 0, 655381, 1, 0, 655382, 1, 0, 655383, 1, 0, 655384, 1, 0, 655385, 1, 0, 655386, 1, 0, 655387, 1, 0, 655388, 1, 0, 655389, 1, 0, 655390, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 720916, 1, 0, 720917, 1, 0, 720918, 1, 0, 720919, 1, 0, 720920, 1, 0, 720921, 1, 0, 720922, 1, 0, 720923, 1, 0, 720924, 1, 0, 720925, 1, 0, 720926, 1, 0, 786460, 1, 0, 786461, 1, 0, 1179664, 1, 0 )

[node name="tittaarea2" parent="." instance=ExtResource( 8 )]
titta_text = "Mitt hem. Synd bara att dörren är så liten att jag inte kommer in."

[node name="CollisionShape2D" type="CollisionShape2D" parent="tittaarea2"]
position = Vector2( 1238.06, 429.343 )
shape = SubResource( 1 )

[node name="tittaarea3" parent="." instance=ExtResource( 8 )]
titta_text = "Min glunkcatcher! Den fångar glunks i vinden och spottar ut det i praktiska prippsburkar."

[node name="CollisionShape2D" type="CollisionShape2D" parent="tittaarea3"]
position = Vector2( 1791.4, 362.721 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 7.0

[node name="scenechange_titta" parent="." instance=ExtResource( 10 )]
arnold_cutscene = "res://scenes/cutscenes/gymväktaren/gymväktaren.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="scenechange_titta"]
position = Vector2( 312.754, 244.281 )
shape = SubResource( 3 )

[node name="YSort" type="YSort" parent="."]

[node name="mike" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( 942.483, 456.962 )
pathfinder_path = NodePath("../../Navigation2D")

[node name="j3ns" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( -84.0936, 650.536 )
mikepath = NodePath("../mike")

[node name="dialogue_player" parent="YSort/j3ns" instance=ExtResource( 5 )]
dialogue_file = "res://assets/dialogue_data/mikes_hem/j3n5.json"
mike_path = NodePath("../../mike")
jens_path = NodePath("..")
dave_path = NodePath("../../d4v3")

[node name="d4v3" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( -273.026, 423.641 )
collision_mask = 4
mikepath = NodePath("../mike")

[node name="dialogue_player" parent="YSort/d4v3" instance=ExtResource( 5 )]
dialogue_file = "res://assets/dialogue_data/mikes_hem/d4v3.json"
mike_path = NodePath("../../mike")
jens_path = NodePath("../../j3ns")
dave_path = NodePath("..")

[node name="Mike_Old" parent="YSort" instance=ExtResource( 14 )]
position = Vector2( -594.267, 272.074 )
mikepath = NodePath("../mike")

[node name="dialogue_player" parent="YSort/Mike_Old" instance=ExtResource( 5 )]
dialogue_file = "res://assets/dialogue_data/mikes_hem/mike_old.json"
mike_path = NodePath("../../mike")
jens_path = NodePath("../../j3ns")
dave_path = NodePath("../../d4v3")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
autoplay = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="trattooinekarta" parent="CanvasLayer" instance=ExtResource( 12 )]
visible = false

[node name="pripps" parent="." instance=ExtResource( 9 )]
position = Vector2( 1683.43, 206.343 )

[node name="pripps2" parent="." instance=ExtResource( 9 )]
visible = false
position = Vector2( 798.472, 550.016 )

[node name="flygpripps" parent="." instance=ExtResource( 13 )]
position = Vector2( 728.558, 46.7523 )
